java 17 + spring-swing 2.0.0-SNAPSHOT